Started integrating PromoCarousel into Dashboard. Fixed star rating spilling out of card.

--- a/src/components/dashboard/PromoCarousel.css
+++ b/src/components/dashboard/PromoCarousel.css
@@ -7,6 +7,10 @@
     max-width: 300px;
 }
 
+.card {
+    max-width: inherit;
+}
+
 .carouselImage {
     max-width: 300px;
 }
